--- a/projet.css
+++ b/projet.css
@@ -1,5 +1,6 @@
 body {
     margin: 0;
+    margin-left: -10px;
     font-family: 'Arial', sans-serif;
     background-color: beige;
     height: 150vh; /* Ajout d'une hauteur importante pour simuler le défilement */
