--- a/projet.css
+++ b/projet.css
@@ -1,5 +1,4 @@
 body {
-    margin-left: -50px;
     font-family: 'Arial', sans-serif;
     background-color: beige;
     height: 150vh; /* Ajout d'une hauteur importante pour simuler le défilement */
@@ -143,6 +142,7 @@ html{
   footer {
     background-color: #333;
     margin-left: -100px;
+    margin-right: 120px
     color: #fff;
     text-align: center;
     padding: 2px;
