--- a/projet.css
+++ b/projet.css
@@ -142,6 +142,7 @@ html{
   footer {
     background-color: #333;
     margin-left: -50px;
+    margin-right:-500px;
     color: #fff;
     text-align: center;
     padding: 2px;
