--- a/projet.css
+++ b/projet.css
@@ -37,7 +37,11 @@ html{
     bottom: 0;
     z-index: -1;
   }
-
+@media (max-width: 768px) {
+    .parallax {
+        background-attachment: scroll; /* Désactive le parallax sur mobile */
+    }
+}
   .content {
     padding: 20px;
     text-align: center;
